--- a/src/global-styles/styles.scss
+++ b/src/global-styles/styles.scss
@@ -12,6 +12,17 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.my-nav-title {
+    font-size: 2.1rem;
+    text-align: center;
+}
+
 .container {
     width: 85%;
     max-width: 1200px;
