--- a/src/index/index.scss
+++ b/src/index/index.scss
@@ -4,17 +4,6 @@ main p {
     font-size: 18px;
 }
 
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.my-nav-title {
-    font-size: 2.1rem;
-    text-align: center;
-}
-
 .demo-preview-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
